ดึงpantibแล้ว แต่ยังไม่เก็บ